--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^3.15.1",
     "pinia": "^2.3.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-tg": "^0.8.0"
   },
   "devDependencies": {
     "@types/node-telegram-bot-api": "^0.64.7",
